<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="wrap_content"
     android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_yellow_color"
        android:padding="@dimen/margin_10">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/five"
            android:id="@+id/titletext_FCpopup"
            android:text="@string/feedback"
            android:textSize="16sp"
            android:textStyle="bold" />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:lines="4"
           android:id="@+id/inputUser_FCpopup"
           android:layout_gravity="center"
           android:gravity="top"
           android:textSize="15sp"
           android:inputType="textMultiLine"
           android:padding="@dimen/margin_10"
           android:layout_margin="@dimen/margin_10"
           android:hint="@string/write_your_feedback"
           android:background="@drawable/rounded_gray_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/skip_FCpopup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/margin_5"
                android:text="@string/skip"
                android:textSize="18sp"
                android:textColor="@color/yellow"/>

            <TextView
                android:id="@+id/submit_FCpopup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_5"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/yellow"
                android:layout_weight="1"
                android:text="@string/submit"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
</RelativeLayout>